--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                João Marcus Christ<br />
+                Developer/Systems Analyst<br />
+                joao.christ@serpro.gov.br
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/joaomc">github.com/joaomc</a><br />
+                <a href="https://twitter.com/joaomc">twitter.com/joaomc</a><br />
               </p>
             </div>
           </div>
