--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,19 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
+<h2 style="text-align:center">{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
 {{ content }}
+</div>
+<div class="post_paginate">
+{% if page.previous %}
+<a class="link_prev" href="{{ page.previous.url }}">&lt;&lt; Post</a>
+{% endif %}
+{% if page.next %}
+<a class="link_next" href="{{ page.next.url }}">Post &gt;&gt;</a>
+{% endif %}
 </div>
 {% if page.comments %}
    <div id="disqus_thread"></div>
