--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,14 @@ a:visited { color: #a0a; }
 .post pre.terminal code {
   background-color: #333;
 }
+
+.post_paginate {
+  width:100%;
+}
+
+a.link_prev {
+  float:left;
+}
+a.link_next {
+  float:right;
+}
