--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 {% if page.comments %}
    <div id="disqus_thread"></div>
     <script type="text/javascript">
-        var disqus_shortname = 'clhtptblog'; 
+        var disqus_shortname = 'alissoncoelhodemorais'; 
 
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
